# AAT

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  config.json  config.json.bak  main.py  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml  wiki-sync.yml
config/: config.default.json
core/: __init__.py  cache_manager.py  config.py  data_processor.py  exceptions.py  export.py  logger.py  paths.py  statistics.py  version.py
docs/: README.md  api-reference.md  deployment-guide.md  design-specification.md  developer-guide.md  testing-guide.md  user-manual.md
gui/: __init__.py  column_selector_dialog.py  main_window.py  settings_dialog.py  styles.py  widgets.py  workers.py
resources/packaging/dmg/: dmg_background.tiff
resources/packaging/icons/: app_icon.icns
scripts/: build_mac_app.py  sync_wiki.sh
tests/: conftest.py  test_cache_manager.py  test_config.py  test_data_processor.py  test_exceptions_extended.py  test_export.py  test_logger.py  test_paths.py  test_statistics.py  test_statistics_extended.py  test_styles.py  test_version.py  test_workers.py
tests/gui/: test_main_window_smoke.py
wiki/: APIリファレンス-API-Reference.md  G-quality評価-G-quality-Evaluation.md  GUI操作ガイド-GUI-Guide.md  Home.md  _Footer.md  _Sidebar.md  macOSアプリ配布-macOS-App-Distribution.md  インストール-Installation.md  グラフと可視化-Graphs-and-Visualization.md  データ解析パイプライン-Data-Analysis-Pipeline.md  トラブルシューティング-Troubleshooting.md  プロジェクト構造-Project-Structure.md  ライセンスと貢献-License-and-Contributing.md  使い方-Usage.md  使用例-Examples.md  変更履歴-Changelog.md  概要-Overview.md  設定-Configuration.md  開発者ガイド-Developer-Guide.md
